align links to button in the feedback support div [Fix #56351124]

--- a/app/assets/stylesheets/catarse_bootstrap/pages/devise.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/pages/devise.sass
@@ -39,7 +39,7 @@
     text-align: center
     color: $raven
   nav
-    padding: .6em .7em
+    padding: .6em 1.3em
     line-height: 160%
     a
       color: $dodgerblue
